# SeqFile

./: .gitignore  CMakeLists.txt  README.md
include/: seqfile.h  seqfiles.h
source/: CMakeLists.txt  readfasta.c  readfastq.c  readreads.c  seqf_core.h  seqf_read.c  seqf_read.h  seqferrno.c  seqflib.c  seqfread.c  seqfstrerror.c
source/tinycthread/: CMakeLists.txt
test/: CMakeLists.txt  tests.c
